# qcc

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
include/: QCC.h
src/: CMakeLists.txt  Platform.h  QCC.cpp  main.cpp
tests/: CMakeLists.txt  basic.cpp
